--- a/page404-app/src/styles/base/_base.scss
+++ b/page404-app/src/styles/base/_base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Montserrat:wght@400;600&family=Space+Mono&display=swap');
 html,
 body {
     box-sizing: border-box;
@@ -13,10 +13,5 @@ body {
 * {
     font-family: "montserrat", sans-serif;
     margin: 0px;
-}
-
-body {
-    margin: 0;
     padding: 0;
-    background-image: linear-gradient(125deg, #6a89cc, #b8e994);
 }
